fix: overflow

--- a/styles/tailwind.css
+++ b/styles/tailwind.css
@@ -26,6 +26,11 @@
     font-weight: inherit;
     unicode-range: U+0041-005A, U+0061-007A, U+0030-0039;
 }
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
 @layer base {
     body {
       font-family: BalooBhaijaan,
